[package]
name = "codegen-for-async-graphql"
version = "0.2.7"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2021"
description = "Internal code generation crate for async-graphql"
publish = true
license = "MIT"
homepage = "https://github.com/atsuhiro/codegen-for-async-graphql"
repository = "https://github.com/atsuhiro/codegen-for-async-graphql"
keywords = ["graphql", "async-graphql"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
default-run = "cargo-codegen-for-async-graphql"

[[bin]]
name = "cargo-codegen-for-async-graphql"
path = "src/codegen.rs"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
codegen-for-async-graphql-renderer= { path = "codegen-for-async-graphql-renderer", version = "0.2.7" }

[workspace]
members = [
    "codegen-for-async-graphql-renderer",
    "examples/codegen-for-async-graphql-example",
]

exclude = [
    "tmp/*",
]
