[package]
name = "codegen-for-async-graphql-renderer"
version = "0.2.7"
authors = ["Atsuhiro Takahashi <fxyoxbjis@gmail.com>"]
edition = "2021"
description = "Internal code generation crate for async-graphql"
publish = true
license = "MIT"
homepage = "https://github.com/atsuhiro/codegen-for-async-graphql"
repository = "https://github.com/atsuhiro/codegen-for-async-graphql"
keywords = ["graphql", "async-graphql"]
categories = ["network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0.38"
async-graphql-parser = "3.0.38"
async-graphql-derive = "3.0.38"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
proc-macro2 = { version = "1.0", default-features = false }
quote = "1.0.7"
toolchain_find = "0.1"
